[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iGEM-Uploads"
version = "0.1.0"
description = "A Streamlit project for iGEM uploads"
authors = [
    { name = "Lucas", email = "your-email@example.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "streamlit",
    "prettytable",
    "requests",
    "lxml",
]
readme = "README.md"
requires-python = ">=3.13"

[tool.streamlit]
server.port = 8501
server.enableCORS = false

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
